--- a/temps/base.html
+++ b/temps/base.html
@@ -9,6 +9,7 @@
 
     {%- block metas %}
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="utf-8">
     {%- endblock metas %}
 
     {%- block styles %}
