--- a/temps/index.html
+++ b/temps/index.html
@@ -28,6 +28,8 @@ function success() {
 	console.log(xhr.readyState);
 	if (xhr.readyState == 4 && xhr.status == 200) {
 		outer.innerHTML = o;
+		const submit = document.getElementById('Sub');
+		submit.onclick = upload;
 		let res = JSON.parse(xhr.responseText);
 		if (res['upload'] == true) {
 			alert('Upload Success!');
