Remove useless js script and change jquey cdn, remove bootstrap use.

--- a/temps/index.html
+++ b/temps/index.html
@@ -26,25 +26,9 @@ const o = outer.innerHTML;
 const files = new Map();
 const sendD = document.getElementById('Sending');
 
-
-function success(xhr, name) {
-	console.log(xhr.readyState);
-	if (xhr.readyState == 4 && xhr.status == 200) {
+function success(name, res) {
 		sendD.removeChild(files[name]);
 		files.delete(name)
-		let res = JSON.parse(xhr.responseText);
-		if (res['upload'] == true) {
-			alert('Upload ' + name +  ' Success!');
-		} else {
-			alert("Failed at " + name + "!");
-		}
-	};
-}
-
-function success2(name) {
-		sendD.removeChild(files[name]);
-		files.delete(name)
-		let res = JSON.parse(xhr.responseText);
 		if (res['upload'] == true) {
 			alert('Upload ' + name +  ' Success!');
 		} else {
@@ -53,29 +37,8 @@ function success2(name) {
 }
 
 function xhrs(data, name) {
-	/*
-	let xhr;
-	if (XMLHttpRequest) {
-		xhr = new XMLHttpRequest();
-	} else {
-		xhr = new ActiveXObject("Microsoft.XMLHTTP");
-	}
-	xhr.onreadystatechange = () => success(xhr, name);
-	xhr.open("POST", "/data", true);
-	xhr.setRequestHeader("Content-Type", "application/x-www-form-urlencoded");
-	*/
-
-	console.log(name, data);
-
-	/*
-	let formdata = new FormData();
-	formdata.append("file", data);
-	formdata.append("name", name);
-	xhr.send(formdata);
-	*/
-
 	let adata = {'file': data, 'name': name};
-	$.post('/data', adata, () => success2(name));
+	$.post('/data', adata, (res) => success(name, res));
 
 	console.log('sending data!');
 
@@ -104,7 +67,7 @@ function upload() {
 		name = file.name;
 		outer.innerHTML = outer.innerHTML;
 		reset();
-		console.log(e.result);
+		// console.log(e.result);
 		xhrs(reader.result, name);
 	}
 	alert("Start uploading!");
