--- a/temps/base.html
+++ b/temps/base.html
@@ -14,7 +14,6 @@
 
     {%- block styles %}
     <!-- Bootstrap -->
-    <link href="{{ url_for('static', filename='bootstrap/css/bootstrap.css') }}" rel="stylesheet">
     {%- endblock styles %}
     {%- endblock head %}
   </head>
@@ -34,8 +33,7 @@
     {%- endblock content %}
 
     {% block scripts %}
-    <script src="{{ url_for('static', filename='bootstrap/jquery.js') }}"></script>
-    <script src="{{ url_for('static', filename='bootstrap/js/bootstrap.js') }}"></script>
+	<script src="https://cdn.staticfile.org/jquery/1.10.2/jquery.min.js"></script>
     {%- endblock scripts %}
     {%- endblock body %}
   </body>
